--- a/view/frontend/layout/ajaxscroll.xml
+++ b/view/frontend/layout/ajaxscroll.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="before.body.end">
-            <block class="Magepow\InfiniteScroll\Block\AjaxInfiniteScroll" name="ajax_infinite_scroll.block" template="Magepow_InfiniteScroll::ajaxinfinitescroll.phtml" />
+            <block class="Magepow\InfiniteScroll\Block\InfiniteScroll" name="infinite_scroll.block" template="Magepow_InfiniteScroll::infinitescroll.phtml" />
         </referenceContainer>
     </body>
 </page>
