--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,43 +1,40 @@
-#infinite-scroll-top
-    {
-       .lib-css(border-radius, 50%);
-        .lib-css(opacity, 0.65);
-    
-        background-color: #ea7a06;
-        background-image: url(../Magepow_InfiniteScroll/images/scroll-to-top.png);
-        background-position: 50% 48%;
-        background-repeat: no-repeat;
-        bottom: 30px;
-        display: none;
-        height: 45px;
-        width: 55px;
-        position: fixed;
-        right: 30px;
-        text-indent: -9999px;
-        z-index: 1;
-        width: 50px;
-        
-        &:hover {
-            background-color: #de2222;
-        }
-    
-        &:focus {
-            outline: none;
-        }
-    }
- 
-//
-//    Tablet and mobile
-//--------------------------------------
-#infinite-scroll-top:hover
-    {
-        opacity:1.0;
-    }
-    .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
-  
-    #infinite-scroll-top {
-        bottom: 15px;
-        right: 15px;
-    }
-
+    //Loading text and image
+.iass-spinner{
+    text-align: center;
+    font-size: 16px;
+    color: #333;
+    display: block; 
 }
+.iass-spinner img{
+    display:inline;
+}
+    //override text when no pages left
+.ias-noneleft{
+    text-align: center;
+    color: #333;
+    letter-spacing: 0px;
+    font-size: 14px;
+    font-weight: 400;
+}
+    //load more
+.ias-trigger-next{
+    text-align: center;
+    cursor: pointer;
+}
+.load-more{
+    font-size:15px;
+    background:#1979c3;
+    color:#fff;
+    border: none;
+    width:100%;
+}
+.load-more::hover{
+    background:#0491ff;
+}
+.ias-trigger-prev{
+    text-align: center;
+    cursor: pointer;
+}
+
+
+
