--- a/view/frontend/templates/infinitescroll.phtml
+++ b/view/frontend/templates/infinitescroll.phtml
@@ -35,7 +35,7 @@ if ($loadingImage) {
             }));
 
             window.ias.extension(new IASNoneLeftExtension({
-                text: "<?php echo $doneText;?>", // override text when no pages left
+                text: "<?php echo $doneText;?>",
                 html: '<div class="ias-noneleft">{text}</div>'
             }));
            window.ias.extension(new IASTriggerExtension({
