--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,3 +1,4 @@
+& when (@media-common = true) {    
     //Loading text and image
 .iass-spinner{
     text-align: center;
@@ -35,6 +36,11 @@
     text-align: center;
     cursor: pointer;
 }
+.iass-spinner img {
+    height: 40px;
+    width: 40px;
+    margin-bottom: 7px;
+}
 
-
+}
 
