--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -1,46 +1,51 @@
 & when (@media-common = true) {    
-    //Loading text and image
-.iass-spinner{
-    text-align: center;
-    font-size: 16px;
-    color: #333;
-    display: block; 
-}
-.iass-spinner img{
-    display:inline;
-}
-    //override text when no pages left
-.ias-noneleft{
-    text-align: center;
-    color: #333;
-    letter-spacing: 0px;
-    font-size: 14px;
-    font-weight: 400;
-}
-    //load more
-.ias-trigger-next{
-    text-align: center;
-    cursor: pointer;
-}
-.load-more{
-    font-size:15px;
-    background:#1979c3;
-    color:#fff;
-    border: none;
-    width:100%;
-}
-.load-more::hover{
-    background:#0491ff;
-}
-.ias-trigger-prev{
-    text-align: center;
-    cursor: pointer;
-}
-.iass-spinner img {
-    height: 40px;
-    width: 40px;
-    margin-bottom: 7px;
-}
+    .iass-spinner{
+        text-align: center;
+        font-size: 16px;
+        color: #333;
+        display: block; 
+    }
+    .ias-noneleft{
+        text-align: center;
+        color: #333;
+        letter-spacing: 0px;
+        font-size: 14px;
+        font-weight: 400;
+    }
+    .iass-spinner img,
+    .ias-noneleft img{
+        display:inline-block;
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .iass-spinner,
+    .ias-noneleft{
+        display: inline-block;
+        width: 100%;
+    }
+
+    .ias-trigger-next{
+        text-align: center;
+        cursor: pointer;
+    }
+    .load-more{
+        font-size:15px;
+        background:#1979c3;
+        color:#fff;
+        border: none;
+        width:100%;
+    }
+    .load-more::hover{
+        background:#0491ff;
+    }
+    .ias-trigger-prev{
+        text-align: center;
+        cursor: pointer;
+    }
+    .iass-spinner img {
+        height: 40px;
+        width: 40px;
+        margin-bottom: 7px;
+    }
 
 }
-
