--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -27,7 +27,10 @@
     .ias-trigger-next{
         text-align: center;
         cursor: pointer;
+        display: inline-block;
+        width: 100%;
     }
+
     .load-more{
         font-size:15px;
         border: none;
