--- a/view/frontend/templates/infinitescroll.phtml
+++ b/view/frontend/templates/infinitescroll.phtml
@@ -19,7 +19,7 @@ if ($loadingImage) {
 } 
 ?>
 <script type="text/javascript">
-    require(['jquery', 'magepow/infinitescroll'], function ($) {
+    require(['jquery', 'magepow/infinitescroll', 'catalogAddToCart'], function ($) {
         "use strict";
         $(document).ready(function () {
             $('body').addClass('infinitescroll');
