Fix conflict after Ajax

--- a/view/frontend/templates/infinitescroll.phtml
+++ b/view/frontend/templates/infinitescroll.phtml
@@ -27,6 +27,9 @@ if ($loadingImage) {
         "use strict";
         $(document).ready(function () {
             $('body').addClass('infinitescroll');
+            if(jQuery().ias) {
+                $.ias('destroy');
+            }
             window.ias = $.ias({
                 container: "<?=  $content ?>",
                 item: "<?= $item ?>",
