--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -14,7 +14,7 @@
     }
     .iass-spinner img,
     .ias-noneleft img{
-        display:inline-block;
+        display:block;
         margin-left:auto;
         margin-right:auto;
     }
