--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -9,8 +9,8 @@
         text-align: center;
         color: #333;
         letter-spacing: 0px;
-        font-size: 14px;
-        font-weight: 400;
+        font-size: 1em;
+        padding: 30px 0;
     }
     .iass-spinner img,
     .ias-noneleft img{
